<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wombat_nav2_pack</name>
  <version>0.0.0</version>
  <description>plugins for nav2</description>
  <maintainer email="you@example.com">m1ch1</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>wombat_local_palnenr</depend>
  <!-- add morg sub pgd deps -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
